k8s/day-5/app2.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app2
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - image: dockersamples/static-site
        name: app2
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 128Mi
            cpu: "200m"
          requests:
            memory: 64Mi
            cpu: "100m"
